# xgboost-survival-embeddings

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  base.html  basic-usage.html  bce.html  catalog-info.yaml  converters.html  extrapolation.html  how_xgbse_works.html  index.html  install.html  kaplan.html  meta.html  metrics.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: benchmarks.html
docs/: base.md  basic-usage.md  bce.md  converters.md  extrapolation.md  how_xgbse_works.md  index.md  install.md  kaplan.md  meta.md  metrics.md
examples/: basic_usage.html  basic_usage.ipynb  confidence_interval.html  confidence_interval.ipynb  extrapolation_example.html  extrapolation_example.ipynb  how_xgbse_works.html  how_xgbse_works.ipynb  using_pre_trained_xgb_as_input.ipynb
javascripts/: config.js
modules/: base.html  bce.html  converters.html  extrapolation.html  kaplan_neighs.html  kaplan_tree.html  meta.html  metrics.html  stacked_weibull.html
search/: search_index.json
stylesheets/: extra.css
tests/: data.py  test_assert_types.py  test_confidence_intervals.py  test_debiased_bce.py  test_extrapolation.py  test_feature_extractors.py  test_meta.py  test_metrics.py  test_neighbors.py  test_survival_curves.py  test_utils.py
xgbse/: __init__.py  _base.py  _debiased_bce.py  _feature_extractors.py  _kaplan_neighbors.py  _meta.py  _stacked_weibull.py  assert_types.py  converters.py  extrapolation.py  metrics.py  (+2 more)
(+24 files in other folders)
